WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
70453
White flash when painting a previously crashed WKView
https://bugs.webkit.org/show_bug.cgi?id=70453
Summary
White flash when painting a previously crashed WKView
Anders Carlsson
Reported
2011-10-19 16:45:52 PDT
White flash when painting a previously crashed WKView
Attachments
Patch
(1.40 KB, patch)
2011-10-19 16:48 PDT
,
Anders Carlsson
sullivan
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2011-10-19 16:48:13 PDT
Created
attachment 111694
[details]
Patch
Anders Carlsson
Comment 2
2011-10-19 16:57:30 PDT
Committed
r97895
: <
http://trac.webkit.org/changeset/97895
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug