White flash when painting a previously crashed WKView https://bugs.webkit.org/show_bug.cgi?id=70453 <rdar://problem/10306906>

Reviewed by John Sullivan.

* UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::reattachToWebProcess):
Call waitForBackingStoreUpdateOnNextPaint so we'll wait for the next paint instead of painting white.

git-svn-id: svn://svn.chromium.org/blink/trunk@97895 bbb929c8-8fbe-4397-9dbb-9b2b20218538