third_party/WebKit/Source/WebKit2/UIProcess/WebPageProxy.cpp
@@ -291,6 +291,7 @@ void WebPageProxy::reattachToWebProcess()
     initializeWebPage();
 
     m_pageClient->didRelaunchProcess();
+    m_drawingArea->waitForBackingStoreUpdateOnNextPaint();
 }
 
 void WebPageProxy::reattachToWebProcessWithItem(WebBackForwardListItem* item)
